<?xml version="1.0"?>
<package format="3">
  <name>tinyPLC_sensor_kit_launch</name>
  <version>0.0.1</version>
  <description>tinyPLC sensor kit bringup</description>
  <maintainer email="you@example.com">xiaoan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
</package>
